src/objects/CPA_Order_Delivery__c.object
<CustomObject>
    <fields>
        <fullName>CPA_Order_Dispatch__c</fullName>
        <label>CPA Order Dispatch</label>
        <referenceTo>CPA_Order_Dispatch__c</referenceTo>
        <relationshipLabel>CPA_Order_Deliveries</relationshipLabel>
        <relationshipName>CPA_Order_Deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Delivery Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Receipt_Number__c</fullName>
        <label>Delivery Receipt Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farmer_Code__c</fullName>
        <description>If this delivery has been rejected due to quality issues and if one of the farmers who contributed to this delivery has been previously flagged for quality issues</description>
        <label>Farmer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Baskets__c</fullName>
        <label>Number of Baskets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Kilos__c</fullName>
        <label>Number of Kilos</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rejected_Baskets__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Rejected Baskets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rejected_Kilos__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Rejected Kilos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rejected_Units_of_Presentation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Rejected Units of Presentation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units_of_Presentation__c</fullName>
        <label>Number of Units of Presentation</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Rejection__c</fullName>
        <label>Reason for Rejection</label>
        <picklist>
            <picklistValues>
                <fullName>Lacerations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Harm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inadequate Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor coloring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <description>Whether this delivery has been accepted</description>
        <inlineHelpText>Whether this delivery has been accepted</inlineHelpText>
        <label>Rejected?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_of_Presentation__c</fullName>
        <label>Unit of Presentation</label>
        <picklist>
            <picklistValues>
                <fullName>Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sack</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CPA Order Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CPA_Order_Dispatch__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Delivery_Receipt_Number__c</columns>
        <columns>Number_of_Baskets__c</columns>
        <columns>Number_of_Kilos__c</columns>
        <columns>Number_of_Rejected_Baskets__c</columns>
        <columns>Farmer_Code__c</columns>
        <columns>Rejected__c</columns>
        <columns>Reason_for_Rejection__c</columns>
        <columns>Number_of_Rejected_Kilos__c</columns>
        <columns>Number_of_Rejected_Units_of_Presentation__c</columns>
        <columns>Number_of_Units_of_Presentation__c</columns>
        <columns>Unit_of_Presentation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CODN-{00000}</displayFormat>
        <label>CPA Order Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPA Order Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>